--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
     "moment": "^2.18.1",
+    "node-localStorage": "0.0.1",
     "nodemon": "^1.11.0",
     "nyc": "^11.0.3",
     "object-assign": "^4.1.1",
