--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "mobx-react": "^4.3.4",
     "moment": "^2.18.1",
     "node-localStorage": "0.0.1",
+    "node-watch": "^0.5.5",
     "nodemon": "^1.11.0",
     "nyc": "^11.0.3",
     "object-assign": "^4.1.1",
