--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
         "url": "https://github.com/"
     },
     "dependencies": {
-        "node-watch": "^0.5.5", 
         "@types/history": "^3.2.0",
         "@types/react": "^15.0.38",
         "@types/react-router": "^3.0.5",
@@ -89,6 +88,7 @@
         "mobx-react": "^4.3.4",
         "moment": "^2.18.1",
         "node-localStorage": "0.0.1",
+        "node-watch": "^0.5.5",
         "nodemon": "^1.11.0",
         "nyc": "^11.0.3",
         "object-assign": "^4.1.1",
@@ -118,6 +118,7 @@
         "redux-localstorage": "1.0.0-rc5",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.2.0",
+        "request": "^2.79.0",
         "require-hacker": "^3.0.0",
         "rimraf": "^2.6.1",
         "sinon": "^2.3.8",
