--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-    "name": "project-template",
-    "version": "0.1.0",
-    "description": "Project Template",
+    "name": "jony-fix",
+    "version": "0.1.1",
+    "description": "佳尼跟拍修图后台",
     "license": "MIT",
     "engines": {
         "node": "6.10.1"
     },
     "main": "main.js",
+    "build": {
+        "appId": "org.shennongmin.QuickStart",
+        "copyright": "Open Totally",
+        "compression": "normal",
+        "nsis": {
+            "oneClick": true,
+            "perMachine": true,
+            "runAfterFinish": true
+        }
+    },
     "scripts": {
-        "electron-start": "electron .",
-        "electron-build-dmg": "electron-packager .  佳尼跟拍 --overwrite --platform=darwin --arch=x64 --ignore=node_modules/electron-*",
-        "prebuild": "npm run clean",
+        "e-start": "electron .",
+        "electron-build-dmg": "electron-packager . 佳尼跟拍 --overwrite --platform=darwin --arch=x64 --ignore=\"(dist|src|docs|.gitignore|LICENSE|README.md|webpack.config.js|node_modules)\" --version 0.1.1 --icon=src/assets/images/icon.icns",
+        "electron-build-all": "electron-packager . 佳尼跟拍 --overwrite --all--ignore=\"(dist|src|docs|.gitignore|LICENSE|README.md|webpack.config.js|node_modules)\" --version 0.1.1",
         "build": "cross-env NODE_ENV=development webpack --progress",
         "release": "rimraf dist && cross-env NODE_ENV=production webpack --progress && npm run deploy",
-        "deploy": "rimraf /Users/liu/git/live/public/cms/* && cp -rf dist/* /Users/liu/git/live/public/cms",
         "clean": "rimraf dist/",
-        "cover": "nyc npm run test",
-        "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-        "dev": "webpack-dev-server",
-        "start": "react-scripts-ts start",
-        "postinstall": "rimraf ./node_modules/@types/node && npm run build",
-        "lint": "npm run lint-ts && npm run lint-js && npm run stylefmt && npm run lint-css ",
-        "lint-css": "stylelint \"./src/**/*.css\"",
-        "lint-ts": "tslint \"src/**/*.tsx\" \"src/**/*.ts\"",
-        "lint-js": "eslint \"**/*.js\" --fix --ignore-path .gitignore",
-        "stylefmt": "stylefmt -R src/",
-        "pretest": "npm run lint",
-        "test": "tsc && ava --verbose",
-        "test:watch": "concurrently \"tsc -w\"  \"ava --verbose --watch\"",
-        "ghpage": "cross-env PUBLIC_PATH=gh npm run build && node ./scripts/gh-pages.js"
+        "dev": "webpack-dev-server"
     },
     "keywords": [],
     "repository": {
@@ -39,7 +35,6 @@
         "url": "https://github.com/"
     },
     "dependencies": {
-        "qiniu": "^7.1.1",
         "@types/history": "^3.2.0",
         "@types/react": "^15.0.38",
         "@types/react-router": "^3.0.5",
@@ -55,12 +50,12 @@
         "babel-preset-es2015": "^6.24.1",
         "bluebird": "^3.5.0",
         "body-parser": "^1.17.2",
+        "builder": "^3.2.3",
         "classnames": "^2.2.5",
         "concurrently": "^3.5.0",
         "cross-env": "^5.0.1",
         "cssnano": "^3.10.0",
         "denodeify": "^1.2.1",
-        "electron": "^1.7.9",
         "enzyme": "^2.9.1",
         "es5-shim": "^4.5.9",
         "es6-promise": "^4.1.1",
@@ -83,6 +78,7 @@
         "http-proxy": "^1.13.2",
         "immutable": "^3.8.1",
         "istanbul": "^0.4.5",
+        "jquery": "^3.2.1",
         "jsdom": "^11.1.0",
         "jsonp": "^0.2.1",
         "mobx": "^3.3.1",
@@ -100,6 +96,7 @@
         "postcss-loader": "^2.0.6",
         "postcss-modules-local-by-default": "^1.2.0",
         "precss": "^2.0.0",
+        "qiniu": "^7.1.1",
         "raw-loader": "^0.5.1",
         "react": "^15.6.1",
         "react-addons-test-utils": "^15.6.0",
@@ -147,8 +144,10 @@
     "devDependencies": {
         "@types/hls.js": "^0.7.4",
         "@types/node": "^8.0.55",
+        "asar": "^0.14.0",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "css-loader": "^0.28.7",
+        "electron": "^1.7.9",
         "electron-package": "^0.1.0",
         "electron-packager": "^10.1.0",
         "jshint": "^2.9.5",
